Ajuste en scss del main

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -18,7 +18,7 @@ main{
 } 
 
 @import './sections/footer';
-// @import './sections/header';
+@import './sections/header';
 @import './sections/main_index';
 @import './sections/main_contactos';
 @import './sections/main_galeria';
