--- a/css/style.css
+++ b/css/style.css
@@ -32,6 +32,20 @@ main h1 {
   .footer p {
     font-size: large; } }
 
+header .nav-color {
+  z-index: 1;
+  background-color: rgba(255, 255, 255, 0.8) !important;
+  border-bottom: 2px solid rgba(255, 255, 255, 0.4);
+  position: fixed; }
+  header .nav-color .logo {
+    width: 50px;
+    margin: 5px; }
+
+/* Medias Querys */
+@media (min-width: 768px) {
+  header .nav-color .logo {
+    width: 70px; } }
+
 .main .collection {
   margin: 10px; }
   .main .collection h1 {
