--- a/css/style.css
+++ b/css/style.css
@@ -12,14 +12,18 @@ main h1 {
   margin-left: 20px;
   margin-top: 10px; }
 
+.b-b, header .nav-color, .main .collection {
+  border-bottom: 2px solid rgba(255, 255, 255, 0.4); }
+
 .footer {
   padding-top: 5px;
   padding-bottom: 5px;
   background-color: #fafafa; }
   .footer .sm {
     display: flex;
-    width: 100%;
-    justify-content: center; }
+    flex-direction: row;
+    justify-content: center;
+    width: 100%; }
     .footer .sm .smLogo {
       width: 8vh;
       margin: 5px 10px; }
@@ -35,7 +39,6 @@ main h1 {
 header .nav-color {
   z-index: 1;
   background-color: rgba(255, 255, 255, 0.8) !important;
-  border-bottom: 2px solid rgba(255, 255, 255, 0.4);
   position: fixed; }
   header .nav-color .logo {
     width: 50px;
@@ -63,8 +66,7 @@ header .nav-color {
     top: 20vh;
     margin: 50px;
     background-color: rgba(255, 255, 255, 0.6);
-    color: black;
-    border-bottom: 2px solid rgba(255, 255, 255, 0.4); }
+    color: black; }
     .main .collection h1 {
       font-size: 2rem;
       padding: 20px 20px 10px 20px; }
