--- a/scss/sections/_header.scss
+++ b/scss/sections/_header.scss
@@ -2,7 +2,7 @@ header{
     .nav-color{
         z-index: 1;
         background-color: rgba(255, 255, 255, 0.80) !important;
-        border-bottom: 2px solid rgba(255, 255, 255, 0.4);
+        @extend .b-b;
         position: fixed;
         
         .logo {
