--- a/scss/sections/_main_index.scss
+++ b/scss/sections/_main_index.scss
@@ -1,5 +1,6 @@
 .main{
     .collection{
+        @extend .b-b;
         margin: 10px;
         h1{
             font-size: x-large;
@@ -22,7 +23,6 @@
             margin: 50px;
             background-color: rgba(255, 255, 255, 0.6);
             color: black;
-            border-bottom: 2px solid rgba(255, 255, 255, 0.4);
             h1{
                 font-size: 2rem;
                 padding: 20px 20px 10px 20px;
