--- a/scss/sections/_main_contactos.scss
+++ b/scss/sections/_main_contactos.scss
@@ -5,6 +5,7 @@
         margin: 10px 0;
         input{
             height: 30px;
+            padding: 10px;
         }
         .form-item {
             font-size: large;
