--- a/scss/sections/_main_contactos.scss
+++ b/scss/sections/_main_contactos.scss
@@ -5,9 +5,9 @@
         margin: 10px 0;
         input{
             height: 30px;
-            padding: 10px;
         }
         .form-item {
+            padding: 10px !important; 
             font-size: large;
             width: 100%;
             margin-bottom: 20px;
