--- a/scss/sections/_footer.scss
+++ b/scss/sections/_footer.scss
@@ -1,19 +1,23 @@
 .footer{
-    padding-top: 5px;
-    padding-bottom: 5px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    padding: 5px;
+    height: 75px;
     background-color: rgb(250, 250, 250);
     .sm{
         @include d(flex, row, center);        
         width: 100%;
         .smLogo{
-            width: 8vh;
-            margin: 5px 10px;
+            width: 40px;
+            margin: 0 10px;
         }
     }
     p{
         width: 100%;
         text-align: center;
         font-size: small;
+        margin-bottom: 0 !important;
     }
 }
 
