--- a/css/style.css
+++ b/css/style.css
@@ -20,8 +20,8 @@ main {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
-  padding: 5px;
-  height: 75px;
+  padding: 10px;
+  height: 85px;
   background-color: #fafafa; }
   .footer .sm {
     display: flex;
@@ -58,10 +58,11 @@ header .nav-color {
   margin: 10px; }
   .main .collection h1 {
     font-size: x-large;
-    margin-left: 20px;
-    margin-top: 10px; }
+    margin-left: 10px;
+    margin-top: 10px;
+    font-weight: 900; }
   .main .collection p {
-    margin: 5px 0; }
+    margin: 5px 10px 5px 10px; }
 
 /* Medias Querys */
 @media (min-width: 768px) {
@@ -177,6 +178,10 @@ header .nav-color {
     flex-direction: row; }
     .main .card .card-top {
       width: 40%; }
+      .main .card .card-top img {
+        width: auto;
+        height: 65vh;
+        overflow: hidden; }
     .main .card .card-bottom {
       width: 60%; } }
 
@@ -200,6 +205,9 @@ header .nav-color {
   flex-wrap: wrap;
   justify-content: space-around; }
   .main .cards-container .card-prod {
+    cursor: pointer;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    border-radius: 20px;
     margin: 20px 10px;
     max-width: 400px; }
     .main .cards-container .card-prod .card-prod-top {
@@ -208,10 +216,14 @@ header .nav-color {
       border-radius: 20px 20px 0px 0px;
       border-color: green;
       border-width: 3px;
-      border-style: solid; }
+      border-style: solid;
+      overflow: hidden; }
       .main .cards-container .card-prod .card-prod-top img {
         width: 100%;
-        border-radius: 20px 20px 0px 0px; }
+        border-radius: 20px 20px 0px 0px;
+        transition: transform .2s; }
+        .main .cards-container .card-prod .card-prod-top img:hover {
+          transform: scale(1.2); }
     .main .cards-container .card-prod .card-prod-bottom {
       background-color: green;
       color: white;
