--- a/scss/sections/_main_index.scss
+++ b/scss/sections/_main_index.scss
@@ -4,11 +4,12 @@
         margin: 10px;
         h1{
             font-size: x-large;
-            margin-left: 20px;
-            margin-top: 10px;   
+            margin-left: 10px;
+            margin-top: 10px;
+            font-weight: 900;   
         }
         p{
-            margin: 5px 0;
+            margin: 5px 10px 5px 10px;
         }
     }
 }
