--- a/scss/sections/_main_nosotros.scss
+++ b/scss/sections/_main_nosotros.scss
@@ -27,6 +27,11 @@
             flex-direction: row;
             .card-top {
                 width: 40%;
+                img{
+                    width: auto;
+                    height: 65vh;
+                    overflow: hidden;
+                }
             }
             .card-bottom {
                 width: 60%;
