--- a/scss/sections/_main_productos.scss
+++ b/scss/sections/_main_productos.scss
@@ -5,6 +5,9 @@
         flex-wrap: wrap;
         justify-content: space-around;
         .card-prod {
+            cursor: pointer;
+            box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+            border-radius: 20px;
             margin: 20px 10px;
             max-width: 400px;
             .card-prod-top {
@@ -14,9 +17,14 @@
                 border-color: green;
                 border-width: 3px;
                 border-style: solid;
+                overflow: hidden;
                 img {
                     width: 100%;
                     border-radius: 20px 20px 0px 0px;
+                    transition: transform .2s;
+                    &:hover{
+                        transform: scale(1.2);
+                    } 
                 }
             }
             .card-prod-bottom {
